src/components/AsideHeader/AsideHeader.scss
@use '../variables';

$block: '.#{variables.$ns}aside-header';

.g-root {
    --gn-aside-top-panel-height: 0px;
}

#{$block} {
    $class: &;
    --gn-aside-header-min-width: 36px;

    --_--item-icon-background-size: 36px;
    --_--background-color: var(--g-color-base-background);
    --_--decoration-collapsed-background-color: var(--g-color-base-warning-light);
    --_--decoration-expanded-background-color: var(--g-color-base-warning-light);
    --_--vertical-divider-line-color: var(--g-color-line-generic);
    --_--horizontal-divider-line-color: var(--g-color-line-generic);

    height: 100%;
    width: 100%;
    position: relative;
    background-color: var(--g-color-base-background);

    &__aside {
        position: sticky;
        top: var(--gn-top-alert-height, 0);
        left: 0;
        height: 100vh;
        width: inherit;
        display: flex;
        flex-direction: column;
        background-color: var(
            --gn-aside-header-expanded-background-color,
            var(--gn-aside-header-background-color, var(--_--background-color))
        );
        z-index: var(--gn-aside-header-z-index, 100);
        max-height: calc(100vh - var(--gn-top-alert-height, 0));
        margin-top: var(--gn-top-alert-height, 0);

        box-sizing: border-box;

        &::after {
            position: absolute;
            top: 0;
            right: 0;
            z-index: 2;
            width: 1px;
            height: 100%;
            content: '';
            background-color: var(
                --gn-aside-header-divider-vertical-color,
                var(--_--vertical-divider-line-color)
            );
        }

        &-popup-anchor {
            position: absolute;
            inset: 0;
            z-index: 1;
        }

        &-content {
            --gradient-height: 334px;

            display: flex;
            flex-direction: column;
            overflow-x: hidden;
            width: inherit;
            height: inherit;
            position: relative;
            z-index: 2;
            user-select: none;

            padding-top: var(--gn-aside-header-padding-top);

            & > #{$class}-logo {
                margin: 8px 0;
            }
        }

        &-content_with-decoration {
            background: linear-gradient(
                180deg,
                var(
                        --gn-aside-header-decoration-expanded-background-color,
                        var(--_--decoration-expanded-background-color)
                    )
                    calc(var(--gradient-height) * 0.33),
                transparent calc(var(--gradient-height) * 0.88)
            );
        }

        &-custom-background {
            position: absolute;
            top: 0;
            bottom: 0;

            display: flex;
            width: var(--gn-aside-header-size);

            z-index: -1;
        }
    }

    &_compact &__aside {
        background-color: var(
            --gn-aside-header-collapsed-background-color,
            var(--gn-aside-header-background-color, var(--_--background-color))
        );

        &-content {
            background: transparent;
        }
    }

    &__aside_expanded-by-hover {
        position: fixed;
        top: 0;
        left: 0;
    }

    &__header {
        --gn-aside-header-header-divider-height: 29px;

        position: relative;
        z-index: 1;
        flex: none;
        box-sizing: border-box;
        width: calc(100%);
        padding-top: 8px;
        padding-bottom: 22px;

        #{$class}__header-divider {
            position: absolute;
            bottom: 0;
            left: 0;
            z-index: -2;
            display: none;
            color: var(
                --gn-aside-header-decoration-collapsed-background-color,
                var(--_--decoration-collapsed-background-color)
            );
        }

        &_with-decoration::before {
            position: absolute;
            top: 0;
            left: 0;
            z-index: -2;
            display: none;
            width: 100%;
            height: calc(100% - var(--gn-aside-header-header-divider-height));
            content: '';
            background-color: var(
                --gn-aside-header-decoration-collapsed-background-color,
                var(--_--decoration-collapsed-background-color)
            );
        }

        &::after {
            position: absolute;
            bottom: 12px;
            left: 0;
            z-index: -2;
            width: 100%;
            height: 1px;
            content: '';
            background-color: var(
                --gn-aside-header-divider-horizontal-color,
                var(--_--horizontal-divider-line-color)
            );
        }
    }

    &_compact &__header {
        &::before {
            display: block;
        }
    }

    &_compact &__header_with-decoration {
        #{$class}__header-divider {
            display: block;
        }

        &::after {
            display: none;
        }
    }

    &__logo-button {
        margin: 0 10px 2px;
    }

    &__logo-button &__logo-icon-place {
        height: var(
            --gn-aside-header-item-icon-background-size,
            var(--_--item-icon-background-size)
        );
        width: var(--gn-aside-header-min-width);
    }

    &__menu-items {
        flex-grow: 1;
    }

    &__footer {
        flex-shrink: 0;
        margin: var(--g-spacing-2) 10px;
        display: flex;
        flex-direction: column;
    }

    &__panels {
        z-index: var(--gn-aside-header-panel-z-index, 98);

        position: fixed;
        inset: var(--gn-top-alert-height, 0) 0 0;
        overflow: auto;
        display: flex;
        flex-direction: column;
        max-height: calc(100vh - var(--gn-top-alert-height, 0));
    }

    &__panel {
        flex-grow: 1;
        height: auto;
    }

    &__pane-container {
        display: flex;
        outline: none;
        overflow: visible;
        user-select: text;
        flex-direction: row;
    }

    &__top-alert {
        position: fixed;
        z-index: var(--gn-aside-header-pane-top-z-index, 98);
        top: 0;
        background: var(--g-color-base-background);
        width: 100%;
    }

    &__content {
        width: calc(100% - var(--gn-aside-header-size));
        margin-top: var(--gn-top-alert-height, 0);

        &_expanded-by-hover {
            padding-left: var(--gn-aside-header-min-width);
        }
    }
}

